--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ test-report.xml
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Azurite artifacts
+__blobstorage__
+__queuestorage__
+__azurite*
