add swa detals and env settings

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # REACT_APP_API_URL is the same as hosted site for production so 
 # it's placed under api subroute
-REACT_APP_API_URL=https://bikeshop.paynter.cv/api
+REACT_APP_API_URL=https://bikeshop.paynter.cv/customapi
 REACT_APP_GANALYTICS_TAG_ID=
